modified thw website using media queries

--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ body{
     gap: 10px;
     align-items: center;
 }
+.navbar__s4{
+    display: none;
+}
 /* my learning popup */
 .mylearning{
     position: relative;
@@ -82,7 +85,7 @@ body{
     color: black;
     border: solid #A435F0 1px;
 }
-.imaged{
+.images{
     position: relative;
 }
 .images img{
@@ -121,7 +124,8 @@ body{
     margin-top: 10px;
 }
 .course-card{
-    width: 300px;
+    flex-grow: 1;
+    flex-basis: 25%;
 }
 .course-card img{
     height: 50%;
@@ -171,5 +175,24 @@ body{
     margin: 20px;
     align-items: center;
 }
+/* Mobile view */
 
-
+@media  screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+}
+@media  screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
+}
